Major changes from version modelE-2-0-1 to modelE-2-1
=====================================================

- Energy conservation now guaranteed

- New physics for deciding on phase of precip (i.e. how quickly
  super-cooled precip turns to ice)

- New coding for ground hydrology

- Small corrections for q-flux/seaice modules

- Improved conservation diagnostics (including new text demonstrating
  conservation properties "conserv.txt")

- Extension to sub-daily diagnostics to include cloud cover (low, mid, high) 
  and relative humidity values.

- Enhanced diagnostics of cloud radiative properties

- Code is now compatible with PGI (Portland Group) compiler.

Major changes from version modelE-2-0 to modelE-2-0-1
=====================================================

 - Minor fixes to almost all components

 - New options for snow-age definitions, Sea-ice and SST cycling.

 - netcdf output now fully functional

 - Changes to makefiles for compilation using Linux compilers (Absoft
   + Lahey/Fujitsu)

Major changes from version modelE-1-3-3 to modelE-2-0
=====================================================

Atmospheric Model:

 - Advection of Q now done outside dynamics loop

 - New sea ice albedo scheme (pudlling and snowage replaced with
   prognostic melt-pond fraction and wet/dry snow flag).

 - solar radiation penetration through sea ice now wavelength dependent

 - the basal fluxes between the ice and ocean are calculated using a new
   turbulence scheme. New routines UNDERICE, iceocean, icelake.

 - parallelisation directives for atmospheric model

 - changes to boundary layer cloud specifications

 - improvements to turbulence calculations (including a fix of a bug
   that caused problems when the first layer was too thin)

 - fix for mass fluxes over topography to prevent unrealistic
   precipitation hotspots

 - Multiple vertical resolutions available

 - new interface for radiation to allow more control of greenhouse
   gases, aerosols etc. from rundeck.